--- a/index.html
+++ b/index.html
@@ -7,9 +7,20 @@
     <title>My Website</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body style="background-color: lightgray; margin: 0;">
     <main>
+      <div class="topBar">
+        <a href="tel:5869326300" class="smallContact">
+          <i class="fa fa-phone" style="padding-top: 15px;" aria-hidden="true"></i> 
+          (586) 932-6300 &emsp;
+        </a>
+        <a class="smallContact" href="https://www.google.com/maps/place/Amazing+Browz+%26+Beauty/@42.626456,-83.026701,17z/data=!4m6!3m5!1s0x8824dd53a6e82963:0xb5f1b50372921964!8m2!3d42.626456!4d-83.0241261!16s%2Fg%2F11q886_m74?entry=ttu&g_ep=EgoyMDI0MTExMy4xIKXMDSoASAFQAw%3D%3D">
+          <i class="fa fa-building" aria-hidden="true"></i>
+          8775 Hall Rd, Utica, MI 48317
+        </a>
+      </div>
       <div class="header" style="width: 100%; top: 0;">
         <a href="/index.html" class="logo" style="color: #68b701; font-size: 20px; font-weight: bold;">Amazing Browz & Beauty</a>
         <div class="header-right">
@@ -23,19 +34,24 @@
       </div>
       <div class="fixedHeader" style="background-color: grey; min-height: 350px;">
         <div style="padding-top: 80px;">
-          <img src="/images/IMG-20210821-WA0024-removebg-preview.png">
+          <img src="/images/IMG-20210821-WA0024-removebg-preview.png" style="width: 55%;">
         </div>
       </div>
+      <h2 class="titleCard">About Us</h2>
       <div class="aboutus">
-        <h2 class="titleCard">About Us</h2>
         <div class="briefIntro" style="text-align: center; min-height: 300px;">
           <h3 style="font-size: 25px; padding-top: 30px;">Welcome to Amazing Brows & Beauty!</h3>
-          We're here to help you feel like your best self! Treat yourself to our amazing services like threading, waxing, facials, and much more.
-          Our team is prepared to sit you down with comfort and send you off with condfidence. 
+          <p style="display: inline-block; max-width: 600px;">
+            We're here to help you feel like your best self! Treat yourself to our amazing services like threading, waxing, facials, and much more.
+            Our team is prepared to sit you down with comfort and send you off with condfidence. 
+          </p>
           <p>Click below to discover your new favorite spot for beauty!</p>
           <p><a href="/about.html" class="button">
                     About Us / Policies
           </a></p>
+        </div>
+        <div>
+          <img style="padding-left: 50px;" src="/images/PHOTO-2024-01-09-11-33-41.jpg">
         </div>
       </div>
       <div class="specials">
@@ -144,14 +160,12 @@
           </div>
           <div class="revCol">
             <div class="content">
-              <h2>Anita Vellaichamy</h2>
+              <h2>AmBreia Brown</h2>
               <h3>5 &#11088;</h3>
-              <p>"I was calling around to find a brow salon open on Thanksgiving. Luckily, I found this place. 
-                I had friendly service with a smile when I entered and I was sat down immediately. The salon is very clean, quiet, and peaceful. 
-                I asked for a brow wax, and she asked if a little bit of threading was okay after the wax. I had no pain at all my whole experience! 
-                She took time to shape them perfectly and my sensitive skin has absolutely no damage (sometimes I swell or scab when I get my brows done). 
-                She was very knowledgeable about hair removal and skin care. My visit was worth the drive! 
-                I had better service/results here than at salons that charge $20+ for brows. I plan to return in a few weeks!"</p>
+              <p>"I came across Amazing Browz & Beauty just driving home from work and decided to give them a try 
+                with my eyebrow threading. I haven't been anywhere else since, they do great work
+                 and very friendly so I'd say give them a try."
+                </p>
             </div>
           </div>
         </div>
@@ -162,13 +176,44 @@
         <div class="contactimg">
           <div class="text" style="width: 100%; padding-bottom: 20px;">
             <h3>Call us at</h3>
-            <a href="tel:5869326300">(586) 932-6300</a>
+            <a href="tel:5869326300" style="text-decoration: none; color: #68b701;">(586) 932-6300</a>
             <h3>We are located at</h3>
-            <a href="https://www.google.com/maps/place/Amazing+Browz+%26+Beauty/@42.626456,-83.026701,17z/data=!4m6!3m5!1s0x8824dd53a6e82963:0xb5f1b50372921964!8m2!3d42.626456!4d-83.0241261!16s%2Fg%2F11q886_m74?entry=ttu&g_ep=EgoyMDI0MTExMy4xIKXMDSoASAFQAw%3D%3D">8775 Hall Rd, Utica, MI 48317</a>
+            <a style="text-decoration: none; color: #68b701;" href="https://www.google.com/maps/place/Amazing+Browz+%26+Beauty/@42.626456,-83.026701,17z/data=!4m6!3m5!1s0x8824dd53a6e82963:0xb5f1b50372921964!8m2!3d42.626456!4d-83.0241261!16s%2Fg%2F11q886_m74?entry=ttu&g_ep=EgoyMDI0MTExMy4xIKXMDSoASAFQAw%3D%3D">8775 Hall Rd, Utica, MI 48317</a>
           </div>
           <div class="image">
             <img src="/images/storeFront.jpg" style="width:80%;">
           </div>
+        </div>
+      </div>
+      <div class="bottomBar">
+        <div class="bottomInfo"> 
+          <p>ABOUT US</p>
+          <div style="color: white; text-align: center;">
+            <span style="display: inline-block; max-width: 250px;">
+              We're here to help you feel like your best self! Treat yourself to our amazing services like threading, waxing, facials, and much more. Our team is prepared to sit you down 
+              with comfort and send you off with confidence.
+            </span>
+          </div>
+        </div>
+        <div class="bottomInfo"> 
+          <p>OUR SERVICES</p>
+          <span style="color: white;">
+            <li>Threading</li>
+            <li>Waxing</li>
+            <li>Facials</li>
+            <li>Tinting</li>
+            <li>Lash Lifting</li>
+            <li>Brow Lamination</li>
+            <li>Henna Tattoo</li>
+          </span>
+        </div>
+        <div class="bottomInfo"> 
+          <p>CONTACT</p>
+          <span>
+            <a href="tel:5869326300" style="text-decoration: none; color: white;">(586) 932-6300</a>
+            <h3> </h3>
+            <a style="text-decoration: none; color: white;" href="https://www.google.com/maps/place/Amazing+Browz+%26+Beauty/@42.626456,-83.026701,17z/data=!4m6!3m5!1s0x8824dd53a6e82963:0xb5f1b50372921964!8m2!3d42.626456!4d-83.0241261!16s%2Fg%2F11q886_m74?entry=ttu&g_ep=EgoyMDI0MTExMy4xIKXMDSoASAFQAw%3D%3D">8775 Hall Rd, Utica, MI 48317</a>
+          </span>
         </div>
       </div>
     </main>
